--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "just-debounce-it": "^3.2.0",
+    "react-icons": "^5.3.0",
     "sass": "^1.81.0",
     "standard": "^17.1.2",
     "vite": "^5.4.10"
