--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "just-debounce-it": "^3.2.0",
+    "prettier": "^3.4.2",
     "react-icons": "^5.3.0",
     "sass": "^1.81.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.4.10"
   }
 }
